# flexicon

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  MANIFEST.in  NOTICE  README.rst  context7.json  genindex.html  history.md  index.html  llms.txt  make.bat  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.claude/: settings.local.json
.doctrees/: index.doctree
.doctrees/api/: flexicon.code.Discourse.doctree  flexicon.code.Grammar.doctree  flexicon.code.Lexicon.doctree  flexicon.code.Lists.doctree  flexicon.code.Notebook.doctree  flexicon.code.Reversal.doctree  flexicon.code.Scripture.doctree  flexicon.code.Shared.doctree  flexicon.code.System.doctree  flexicon.code.TextsWords.doctree  flexicon.code.doctree  flexicon.doctree  flexicon.sync.doctree  modules.doctree
.github/workflows/: publish-docs.yml  publish.yml
_modules/: index.html
_modules/flexicon/code/: BaseOperations.html  FLExGlobals.html  FLExInit.html  FLExLCM.html  FLExProject.html  PythonicWrapper.html  exceptions.html  lcm_casting.html
_modules/flexicon/sync/: conflict_resolvers.html  dependency_graph.html  dependency_resolver.html  diff.html  engine.html  export.html  hierarchical_importer.html  match_strategies.html  merge_ops.html  selective_import.html  validation.html
_static/: basic.css  pyramid.css
api/: flexicon.code.Discourse.html  flexicon.code.Grammar.html  flexicon.code.Lexicon.html  flexicon.code.Lists.html  flexicon.code.Notebook.html  flexicon.code.Reversal.html  flexicon.code.Scripture.html  flexicon.code.Shared.html  flexicon.code.System.html  flexicon.code.TextsWords.html  flexicon.code.html  flexicon.html  flexicon.sync.html  modules.html
docs/: API_ISSUES_CATEGORIZED.md  CUSTOM_FIELDS.md  FUNCTION_REFERENCE.md  MIGRATION_GUIDE.md  TRANSACTION_GUIDE.md  getall-contract.md
docs/internal/: MANIFEST.md  PRE_COMMIT_SETUP.md
docs/sphinx/: conf.py  flexicon.rst  index.rst  readme.txt
flexicon/: __init__.py
flexicon/code/: BaseOperations.py  BaseOperations.pyi  FLExProject.py  _op_aliases.py  transaction.py
flexicon/code/Discourse/: ConstChartClauseMarkerOperations.py  ConstChartMovedTextOperations.py  ConstChartOperations.py  ConstChartRowOperations.py  ConstChartWordGroupOperations.py
flexicon/code/Grammar/: EnvironmentOperations.py  EnvironmentOperations.pyi  GramCatOperations.py  GramCatOperations.pyi  InflectionFeatureOperations.py  InflectionFeatureOperations.pyi  MorphRuleOperations.py  MorphRuleOperations.pyi  NaturalClassOperations.py  NaturalClassOperations.pyi  POSOperations.py  POSOperations.pyi  PhonFeatureOperations.py  PhonemeOperations.py  PhonemeOperations.pyi  PhonologicalRuleOperations.py  PhonologicalRuleOperations.pyi  StratumOperations.py  affix_template_collection.py  compound_rule.py  prohibition_collection.py
flexicon/code/Lexicon/: AllomorphOperations.py  AllomorphOperations.pyi  EtymologyOperations.py  EtymologyOperations.pyi  ExampleOperations.py  ExampleOperations.pyi  LexEntryOperations.py  LexEntryOperations.pyi  LexReferenceOperations.py  LexReferenceOperations.pyi  LexSenseOperations.py  LexSenseOperations.pyi  MSAOperations.py  MSAOperations.pyi  PronunciationOperations.py  PronunciationOperations.pyi  SemanticDomainOperations.py  SemanticDomainOperations.pyi  VariantOperations.py  VariantOperations.pyi  allomorph.py  morphosyntax_analysis.py  msa_collection.py
flexicon/code/Lists/: AgentOperations.py  AgentOperations.pyi  ConfidenceOperations.pyi  OverlayOperations.pyi  PossibilityListOperations.pyi  PublicationOperations.py  PublicationOperations.pyi  TranslationTypeOperations.py  TranslationTypeOperations.pyi  (+1 more)
flexlibs2/: __init__.py
flexlibs2/code/: BaseOperations.py
plans/: rename-to-flexicon-and-publish.md
specs/getall-contract-flexicon/: .crew-handoff.json  SPEC.md  STATUS.md  tasks.md
specs/issues-212-219/: .crew-handoff.json
tests/: test_flexproject_aliases.py  test_pattern_writing_systems_enumeration.py  test_wrap_enumerable_pattern.py  test_wrappers.py
tests/operations/: test_allomorph_create_morphtype.py  test_apply_syncable_properties.py  test_custom_field_multistring_best_alt.py  test_lexentry_operations.py  test_media_add_picture_owned_cmfile.py  test_morph_type_utils.py  test_morphrule_duplicate_deep.py  test_msa_remove_orphaned.py  test_null_guards_ws_lookup.py  test_phon_features.py  test_phonemes.py  test_segment_analysis_traversal.py  test_segment_operations.py  test_text_operations.py  test_transaction_rollback.py  test_validate_param_isvalidobject.py  test_yield_cast_pattern.py
(+160 files in other folders)
